--- a/src/theme/markdown.sass
+++ b/src/theme/markdown.sass
@@ -351,7 +351,7 @@
       //background-color: #f7f7f7
       border-radius: 3px
 
-  code[class*="language-"]
+  code
     color: #f8f8f2
     background: none
     text-shadow: 0 1px rgba(0, 0, 0, 0.3)
@@ -370,7 +370,7 @@
     -ms-hyphens: none
     hyphens: none
 
-  pre[class*="language-"]
+  pre
     color: #f8f8f2
     background: none
     text-shadow: 0 1px rgba(0, 0, 0, 0.3)
@@ -395,12 +395,12 @@
 
   /* Code blocks
 
-  \:not(pre) > code[class*="language-"], pre[class*="language-"]
+  \:not(pre) > code, pre
     background: #272822
 
   /* Inline code
 
-  \:not(pre) > code[class*="language-"]
+  \:not(pre) > code
     padding: .1em
     border-radius: .3em
     white-space: normal
