--- a/src/theme/tomorrow_night.sass
+++ b/src/theme/tomorrow_night.sass
@@ -1,4 +1,4 @@
-$colors: (background: #1d1f21, current_line: #282a2e, selection: #373b41, foreground: #c5c8c6, comment: #969896, red: #cc6666, orange: #de935f, yellow: #f0c674, green: #b5bd68, aqua: #8abeb7, blue: #81a2be, purple: #b294bb)
+$colors: (background: #1d1f21, current_line: #282a2e, selection: #373b41, foreground: #f1f1f1, comment: #969896, red: #cc6666, orange: #de935f, yellow: #f0c674, green: #b5bd68, aqua: #8abeb7, blue: #81a2be, purple: #b294bb)
 
 .side-bar, .content
   float: left
@@ -8,6 +8,7 @@ $colors: (background: #1d1f21, current_line: #282a2e, selection: #373b41, foregr
   padding: 20px
 
 .side-bar
+  box-shadow: 1px 0 1px 1px rgba(0, 0, 0, .3)
   background: map-get($colors, background)
 
 a.logo
