--- a/src/theme/markdown.sass
+++ b/src/theme/markdown.sass
@@ -215,6 +215,10 @@
   p, blockquote, ul, ol, dl, table, pre
     margin-top: 0
     margin-bottom: 16px
+  p img
+    display: block
+    margin: auto
+    padding: 0.2em 0
   hr
     height: 0.25em
     padding: 0
@@ -319,9 +323,7 @@
     box-sizing: content-box
     background-color: #fff
   code
-    padding: 0
-    padding-top: 0.2em
-    padding-bottom: 0.2em
+    padding: 0.2em 0
     margin: 0
     font-size: 85%
     background-color: rgba(0, 0, 0, 0.04)
