--- a/src/theme/markdown.sass
+++ b/src/theme/markdown.sass
@@ -217,8 +217,7 @@
     margin-bottom: 16px
   p img
     display: block
-    margin: auto
-    padding: 0.2em 0
+    margin: 2em auto
   hr
     height: 0.25em
     padding: 0
