- Add Github link

--- a/src/theme/default.sass
+++ b/src/theme/default.sass
@@ -16,3 +16,7 @@ html, body, #thrux-docs, .container
 
 body
   font-family: 'Droid Sans', sans-serif
+
+.github-logo
+  position: fixed
+  right: 0
