--- a/src/theme/default.sass
+++ b/src/theme/default.sass
@@ -11,12 +11,22 @@ html, body, #thrux-docs, .container
   margin: 0
   height: 100%
   width: 100%
-  overflow: hidden
   font-size: 16px
+  display: block
+  @media screen and (min-width: 35.5em)
+    display: -webkit-flex
+    display: flex
+    overflow: hidden
 
 body
   font-family: 'Droid Sans', sans-serif
 
 .github-logo
-  position: fixed
-  right: 0
+  display: block
+  width: 64px
+  margin: auto
+  img
+    width: 100%
+    height: 100%
+    display: block
+
