--- a/src/theme/tomorrow_night.sass
+++ b/src/theme/tomorrow_night.sass
@@ -1,15 +1,18 @@
 $colors: (background: #1d1f21, current_line: #282a2e, selection: #373b41, foreground: #f1f1f1, comment: #969896, red: #cc6666, orange: #de935f, yellow: #f0c674, green: #b5bd68, aqua: #8abeb7, blue: #81a2be, purple: #b294bb)
 
 .side-bar, .content
-  float: left
-  height: 100%
+  @media screen and (min-width: 35.5em)
+    flex: 1
+    height: 100%
 
-.content
+.markdown-body
   padding: 20px
 
 .side-bar
   box-shadow: 1px 0 1px 1px rgba(0, 0, 0, .3)
   background: map-get($colors, background)
+  @media screen and (min-width: 35.5em)
+    max-width: 200px
 
 a.logo
   width: 100%
