- Add some shadow to the button

--- a/src/theme/tomorrow_night.sass
+++ b/src/theme/tomorrow_night.sass
@@ -36,6 +36,7 @@ a.menu-logo
   background: white
   text-align: center
   padding-top: 8px
+  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, .3)
   img
     height: 52px
     width: 48px
