--- a/src/theme/tomorrow_night.sass
+++ b/src/theme/tomorrow_night.sass
@@ -7,6 +7,10 @@ $colors: (background: #1d1f21, current_line: #282a2e, selection: #373b41, foregr
 
 .markdown-body
   padding: 20px
+  h1 img
+    width: 160px
+    @media screen and (min-width: 35.5em)
+      width: auto
 
 .side-bar
   flex: 1
@@ -33,10 +37,10 @@ a.menu-logo
   border-radius: 50%
   width: 70px
   height: 70px
-  background: white
   text-align: center
   padding-top: 8px
   box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, .3)
+  background: white
   &:active
     box-shadow: none
     right: 4px
@@ -77,3 +81,72 @@ a
       @media screen and (min-width: 35.5em)
         margin-bottom: 10px
         font-size: 16px
+
+.menu-btn
+  position: fixed
+  z-index: 1
+  bottom: 5px
+  right: 5px
+  padding: 14px 10px
+  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, .3)
+  background: white
+  border-radius: 50%
+  &:active
+    bottom: 4px
+    right: 4px
+    box-shadow: none
+  .nav-icon
+    width: 30px
+    height: 22px
+    -webkit-transform: rotate(0deg)
+    -moz-transform: rotate(0deg)
+    -o-transform: rotate(0deg)
+    transform: rotate(0deg)
+    -webkit-transition: .5s ease-in-out
+    -moz-transition: .5s ease-in-out
+    -o-transition: .5s ease-in-out
+    transition: .5s ease-in-out
+    cursor: pointer
+
+    span
+      display: block
+      position: absolute
+      height: 4px
+      width: 100%
+      background: #00B4FC
+      border-radius: 2px
+      opacity: 1
+      left: 0
+      -webkit-transform: rotate(0deg)
+      -moz-transform: rotate(0deg)
+      -o-transform: rotate(0deg)
+      transform: rotate(0deg)
+      -webkit-transition: .25s ease-in-out
+      -moz-transition: .25s ease-in-out
+      -o-transition: .25s ease-in-out
+      transition: .25s ease-in-out
+      &:nth-child(1)
+        top: 0
+      &:nth-child(2), &:nth-child(3)
+        top: 9px
+      &:nth-child(4)
+        top: 18px
+    &.open span
+      &:nth-child(1)
+        top: 9px
+        width: 0
+        left: 50%
+      &:nth-child(2)
+        -webkit-transform: rotate(45deg)
+        -moz-transform: rotate(45deg)
+        -o-transform: rotate(45deg)
+        transform: rotate(45deg)
+      &:nth-child(3)
+        -webkit-transform: rotate(-45deg)
+        -moz-transform: rotate(-45deg)
+        -o-transform: rotate(-45deg)
+        transform: rotate(-45deg)
+      &:nth-child(4)
+        top: 9px
+        width: 0
+        left: 50%
