--- a/src/theme/tomorrow_night.sass
+++ b/src/theme/tomorrow_night.sass
@@ -91,6 +91,8 @@ a
   box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, .3)
   background: white
   border-radius: 50%
+  @media screen and (min-width: 35.5em)
+    display: none
   &:active
     bottom: 4px
     right: 4px
